# ezkl

./: .gitignore  README.md  ezkl_demo.ipynb  little_transformer.ipynb  main.py  proof_splitting.ipynb  pyproject.toml  simple_demo.ipynb
notebooks/: 01_onnx.ipynb  02_settings.ipynb  03_calibrate.ipynb  04_compile.ipynb  05_witness.ipynb  06_setup.ipynb  little_transformer_update.ipynb  set_membership.ipynb  set_real_membership.ipynb  simple_demo.ipynb
notebooks/simple_demo/: 00_check_env.ipynb  04_compile.ipynb  05_witness.ipynb  06_setup.ipynb  07_prove_verify.ipynb  simple_demo.ipynb
