[project]
name = "ezkl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezkl",
    "torch",
    "torchvision",
    "onnx",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
